@@ -40,6 +40,8 @@ Release date to be announced, codename to be decided.
 - For conditional responses the content length is no longer set when it
   is already there and added if missing.
 - Immutable datastructures are hashable now.
+- Headers datastructure no longer allows newlines in values to avoid
+  header injection attacks.
 
 Version 0.7.2
 -------------
